Finish welcome page interface.After 2.5s the activity will jump to next Activity.

--- a/CLIENT/RESTSIQS/res/layout/main.xml
+++ b/CLIENT/RESTSIQS/res/layout/main.xml
@@ -4,10 +4,18 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
         >
-    <TextView
+    <FrameLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Hello World, MainActivity"
-            />
+            android:layout_height="fill_parent" android:layout_gravity="center_horizontal"
+            android:background="#ffffff">
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="RESTSIQS"
+                android:id="@+id/helloText" android:layout_gravity="center"
+                android:textSize="40sp"
+                android:textColor="#000000"/>
+    </FrameLayout>
 </LinearLayout>
 
