--- a/CLIENT/RESTSIQS/res/layout/course_list.xml
+++ b/CLIENT/RESTSIQS/res/layout/course_list.xml
@@ -20,7 +20,7 @@
             <ListView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/listView"
+                    android:id="@+id/courseList"
                     android:layout_gravity="center_horizontal"/>
         </LinearLayout>
 
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="获取公告"
-                android:id="@+id/button"
+                android:id="@+id/btnGetNotice"
                 android:layout_below="@+id/linearLayout"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"/>
