--- a/CLIENT/RESTSIQS/res/layout/course_item.xml
+++ b/CLIENT/RESTSIQS/res/layout/course_item.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent" android:layout_height="match_parent"
               android:orientation="vertical"
-              android:id="@+id/my_item">
+              android:id="@+id/course_item">
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="title"
-            android:id="@+id/item_title"/>
+
+            android:id="@+id/course_item_title" android:layout_marginLeft="0dp"
+            android:layout_alignParentTop="true" android:layout_alignParentStart="true"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="context"
-            android:id="@+id/item_context"/>
-</LinearLayout>
+            android:id="@+id/course_item_sum" android:layout_marginLeft="0dp"
+            android:layout_alignBottom="@+id/course_item_title" android:layout_alignParentEnd="true"/>
+</RelativeLayout>
