--- a/CLIENT/RESTSIQS/res/layout/login.xml
+++ b/CLIENT/RESTSIQS/res/layout/login.xml
@@ -23,7 +23,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:text="account"
                 android:ems="10"
                 android:id="@+id/account"
                 android:layout_below="@+id/title"
@@ -47,7 +46,8 @@
                 android:id="@+id/btnLogin"
                 android:layout_marginTop="39dp"
                 android:layout_below="@+id/password"
-                android:layout_centerHorizontal="true"/>
+                android:layout_centerHorizontal="true"
+                />
 
     </RelativeLayout>
 </RelativeLayout>
