--- a/CLIENT/RESTSIQS/res/layout/notice_detail.xml
+++ b/CLIENT/RESTSIQS/res/layout/notice_detail.xml
@@ -2,23 +2,39 @@
                 xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                 android:layout_height="match_parent" tools:context="devouty.restsiqs.NoticeDetailActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="关于降学费的通知"
-            android:id="@+id/textView"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="46dp"
-            android:textSize="40dp"/>
+        <ScrollView
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="    由于学校有钱了，今年学费降3000，所退还学费将在三天内退还至本人银行卡。"
-            android:id="@+id/textView2"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:textSize="30dp"/>
+        </ScrollView>
+    <RelativeLayout android:layout_width="fill_parent"
+                    android:layout_height="fill_parent" android:layout_alignParentTop="true"
+                    android:layout_alignParentStart="true">
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/notice_detail_title"
+                android:text="Title"
+                android:textSize="35dp"
+                android:layout_alignParentTop="true" android:gravity="top" android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"/>
+
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_below="@+id/notice_detail_title" android:layout_alignParentStart="true">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:id="@+id/notice_detail_context"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="20dp"/>
+        </LinearLayout>
+
+    </RelativeLayout>
+
+
 </RelativeLayout>
