--- a/CLIENT/RESTSIQS/res/layout/main.xml
+++ b/CLIENT/RESTSIQS/res/layout/main.xml
@@ -12,10 +12,12 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="RESTSIQS"
+                android:text="在线学生信息\n    查询系统"
                 android:id="@+id/helloText" android:layout_gravity="center"
                 android:textSize="40sp"
                 android:textColor="#000000"/>
+
+
     </FrameLayout>
 </LinearLayout>
 
