--- a/CLIENT/RESTSIQS/app/src/main/res/values/styles.xml
+++ b/CLIENT/RESTSIQS/app/src/main/res/values/styles.xml
@@ -6,4 +6,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <style name="NoTitleFullscreen" parent="Base.Theme.AppCompat">
+        <item name="android:windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+
 </resources>
