--- a/CLIENT/RESTSIQS/app/src/main/res/layout/te_list.xml
+++ b/CLIENT/RESTSIQS/app/src/main/res/layout/te_list.xml
@@ -11,6 +11,6 @@
         <ListView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/noticeList"></ListView>
+                android:id="@+id/teList"></ListView>
     </LinearLayout>
 </RelativeLayout>
