--- a/CLIENT/RESTSIQS/app/src/main/res/layout/course_item.xml
+++ b/CLIENT/RESTSIQS/app/src/main/res/layout/course_item.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent" android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:id="@+id/course_item">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="32dp"
-            android:id="@+id/course_item_title" android:layout_marginLeft="0dp"
-            android:layout_alignParentTop="true" android:layout_alignParentStart="true"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="      " />
 
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/course_item_sum" android:layout_marginLeft="0dp"
-            android:layout_alignBottom="@+id/course_item_title" android:layout_alignParentEnd="true"/>
-</RelativeLayout>
+        android:id="@+id/course_item_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="32dp" />
+
+    <TextView
+        android:id="@+id/course_item_sum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+</LinearLayout>
